fix(ria): fix flickering on `/login.html` page load
Use a good ol' css trick: add a special class (`js`) that hides elements
managed by js. This class will be removed after initialization to avoid
flickering the ui.

--- a/ria/src/main/webapp/css/common.css
+++ b/ria/src/main/webapp/css/common.css
@@ -216,3 +216,7 @@ small, .text_small {
     height: 100%;
 }
 
+.js {
+    display: none;
+}
+
